my first post - Why blockchain

--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 ---
 layout: page
 title: About Us
-description: This is what we do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<h2 class="section-heading">Authors:</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p><strong>Josip Koncurat</strong></p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p>Software engineer and Blockchain enthusiast.
+    Currently working at
+    <a href="https://ampnet.io/apx.html" target="_blank" rel="noopener noreferrer">AMPnet</a>,
+    a blockchain start-up building an investment platform and protocol for tokenization of real-world assets.</p>
 
-<p class="mb-5">Feel free to contact me at: jkoncura@gmail.</p>
+<p class="mb-5">Feel free to contact me at: jkoncura@gmail.com</p>
