--- a/_posts/2021-03-28-why-blockchain.html
+++ b/_posts/2021-03-28-why-blockchain.html
@@ -15,9 +15,9 @@ background: '/img/posts/fire.png'
 
 <p>Crypto is pretty much the same these days. All the gamblers went to crypto like flies to manure. Behind all the pump and dump, get rich quick schemes, there is however a strong fundamental which attracts people, almost at an unconscious level.</p>
 
-<p>I must admit I am not like my friend. I wouldn't mind getting rich quick, especially for nothing, but that's not something that drives me.</p>
+<p>I must admit I am not like my friend. I wouldn't mind getting rich quick, but that's not something that drives me.</p>
 
-<p>I was always fascinated with money, ideas attracted me to blockchain technology. I spent eight years of my life invested in Oil & Gas Engineering. I liked that vocation. It was exciting to look for the black gold. Now I am ready to continue my search and this time for another form of gold, a digital treasure in many forms and shapes.</p>
+<p>I have always been fascinated with money, ideas attracted me to blockchain technology. I spent eight years of my life invested in Petroleum Engineering. I liked that vocation. It was exciting to look for the black gold. Now I am ready to continue my search and this time for another form of gold, a digital treasure in many forms and shapes.</p>
 
 <h2 class="section-heading">Tell Me Why</h2>
 <p>Let me clear out some terminology before proceeding.</p>
@@ -41,15 +41,15 @@ background: '/img/posts/fire.png'
 <p><b>Revolutionary:</b> Similar to the internet and the automobile, cryptocurrencies are revolutionary and can change the world.
     The power structure of the current financial system will be shaken and reshaped for the better.</p>
 
-<p><b>Immutable:</b> Blockchains are immutable and tamper-evident. While our ancestors said written in stone, our children will say written on the blockchain.</p>
+<p><b>Immutable:</b> Blockchains are immutable and tamper-evident. While what our ancestors said was written in stone, what our children will say will be written on the blockchain.</p>
 
 <p><b>Public:</b> Blockchains are public, flat networks between participants. Peer to peer. No one controls what transactions can take place and all the data is verifiable and auditable by anyone.</p>
 
-<p><b>Collaborative:</b> Gone are the days when our only options are opaque banking systems. Volunteer participants on the protocol work together to run the network and collaborate to establish and enforce consensus rules.</p>
+<p><b>Collaborative:</b> Gone are the days when our only options were opaque banking systems. Volunteer participants on the protocol work together to run the network and collaborate to establish and enforce consensus rules.</p>
 
 <p><b>Open:</b> Anyone can participate on the blockchain. There are no barriers to entry, no borders, and no permission is required. If you have an internet-connected smartphone, you have all you need to participate.</p>
 
-<p><b>Censorship-resistant:</b> Crypto is resistant to censorship, interference, seizure,  manipulation, or control, which makes it neutral to all participants and all transactions. It is not controlled by governments or banks or corporations. Blockchain is controlled by the people.</p>
+<p><b>Censorship-resistant:</b> Crypto is resistant to censorship, interference, seizure,  manipulation, or control, which makes it neutral to all participants and all transactions. It is not controlled by governments, banks or corporations. Blockchain is controlled by the people.</p>
 
 <p><b>Decentralized:</b> Crypto’s greatest strength is that it is not controlled by a central authority, but rather it is a decentralized protocol.</p>
 
