--- a/_posts/2021-03-28-why-blockchain.html
+++ b/_posts/2021-03-28-why-blockchain.html
@@ -50,10 +50,10 @@ background: '/img/posts/fire.png'
 
 <p><b>Open:</b> Anyone can participate on the blockchain. There are no barriers to entry, no borders, and no permission is required. If you have an Internet-connected smartphone, you have all you need to participate.</p>
 
-<p><b>Censorship-resistant:</b> Crypto is resistant to censorship, interference, seizure,  manipulation, or control, which makes it neutral to all participants and all transactions. It is not controlled by governments, banks or corporations. Blockchain is controlled by the people.</p>
+<p><b>Censorship-resistant:</b> Crypto is resistant to censorship, interference, seizure,  manipulation, or control, which makes it neutral to all participants and all transactions. It is not controlled by governments, banks, or corporations. Blockchain is controlled by the people.</p>
 
 <p><b>Decentralized:</b> Crypto’s greatest strength is that it is not controlled by a central authority, but rather it is a decentralized protocol.</p>
 
 <p>At its core, blockchains are neutral platforms. These networks do not, cannot prioritize, or censor any transaction based on anything other than the adherence to the consensus protocols.</p>
 
-<p>A financial world truly controlled by computer code would be brutal and would make it a tyranny rather than liberation from the old worn out financial systems and I believe we will see a variety of blockchain implementations with various degrees of decentralization.</p>
+<p>All of these attributes make cryptocurrencies highly desirable, almost like a perfect utopia. On the other hand, the immutability of blockchain has its cost. Some studies suggest that as much as <a href="https://www.investopedia.com/news/20-all-btc-lost-unrecoverable-study-shows/" target="_blank" rel="noopener noreferrer">20% of all Bitcoin are permanently lost</a>. Is this technology ready to be used by our seniors or the broader population? I seriously doubt it, at least at this time. Nonetheless, blockchain technology is still in its infancy, and we are yet to see all of the potentials it has. All great things are both hyped and misunderstood in their beginnings. I believe its future is bright and promising!</p>
