--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@ background: '/img/bg-about.jpg'
 <p>Software engineer and Blockchain enthusiast.
     Currently working at
     <a href="https://ampnet.io/apx.html" target="_blank" rel="noopener noreferrer">AMPnet</a>,
-    a blockchain start-up building an investment platform and protocol for tokenization of real-world assets.</p>
+    the hottest Croatian blockchain start-up building an investment platform and protocol for tokenization of real-world assets.</p>
 
 <p class="mb-5">Feel free to contact me at: jkoncura@gmail.com</p>
