--- a/_posts/2021-03-28-why-blockchain.html
+++ b/_posts/2021-03-28-why-blockchain.html
@@ -17,7 +17,7 @@ background: '/img/posts/fire.png'
 
 <p>I must admit I am not like my friend. I wouldn't mind getting rich quick, but that's not something that drives me.</p>
 
-<p>I have always been fascinated with macroeconomics and the role of money in the economy. To be frank, on the opposite I didn't understand it, I was only thinking and analyzing the pieces of the overall puzzle which combined dictate an economy of a country. Now, this new form of money is being developed, enabling smooth financing and international exchange of value across the world.</p>
+<p>I have always been fascinated with macroeconomics and the role of money in the economy. To be frank, I didn't completely understand it, I was only thinking and analyzing the pieces of the puzzle which when combined dictate the economy. Now, this new form of money is being developed, enabling smooth financing and international exchange of value across the world.</p>
 
 <p>Despite the curiosity about economics, I spent eight years of my life invested in Petroleum Engineering. I liked that vocation. It was exciting to look for the black gold. Nevertheless, I'm back to feed my initial curiosity and now I am ready to continue my search but this time for another form of gold, a digital treasure in many forms and shapes.</p>
 
