added an about section about myself

--- a/about.html
+++ b/about.html
@@ -14,3 +14,11 @@ background: '/img/bg-about.jpg'
     the hottest Croatian blockchain start-up building an investment platform and protocol for tokenization of real-world assets.</p>
 
 <p class="mb-5">Feel free to contact me at: jkoncura@gmail.com</p>
+
+<p><strong>Gene A.</strong></p>
+
+<p>Software developer, currently working in the fintech field.
+   Interested in blockchain, with focus on Ethereum.
+</p>
+
+<p class="mb-5">You can contact me at: ajin.gene@protonmail.com</p>
