--- a/_posts/2021-04-25-byzantine-generals-problem.html
+++ b/_posts/2021-04-25-byzantine-generals-problem.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Byzantine Generals Problem"
 subtitle: ""
-date: 2021-04-19 10:45:13 -0400
+date: 2021-04-25 10:45:13 -0400
 background: '/img/posts/byzantine.png'
 ---
 <p>Have you ever tried to agree on a time and place to meet with a couple of friends? It can be hard and exhausting, right.
@@ -10,22 +10,32 @@ background: '/img/posts/byzantine.png'
     misguide others on the location or time of meetup. Yep, that's the problem bitcoin managed to solve.</p>
 
 <p>One way of summarizing the Byzantine Generals Problem is by asking a question.
-    How do multiple entities which are separated by distance and can only communicate through a channel which can't be trusted agree upon before an action is taken?
+    How do multiple entities which are separated by distance and can only communicate through a channel which can't be trusted agree on an action before it's taken?
     Let's illustrate this by presenting a somewhat simpler system with only two entities. This is commonly referred to as the Two Generals' Problem and at first glance, it seems almost trivial to solve.
 </p>
 
 <h2 class="section-heading">Red And Blue Army Coordination</h2>
 <p>Picture a heavily fortified castle in the middle of a valley. There are two armies, the Red and the Blue Army, standing on the edges of the valley.
     The battle for the castle can only be won if the two armies attack at the same time. A single army isn't going to make it.
-    They need the combined strength from both sides of the valley to win. The trick is that the only way they can communicate and coordinate the attack is
+    They need the combined strength from both sides of the valley to win. </p>
+
+{% for image in site.static_files %}
+{% if image.path contains 'assets/images/two_generals.png' %}
+<img class="img_fluid" src="{{ image.path }}" alt="Gamblers Image">
+{% endif %}
+{% endfor %}
+
+<p>The trick is that the only way they can communicate and coordinate the attack is
     by sending messengers on a risky path through the valley. How can the Red and Blue Army Generals coordinate to make sure they attack at the same time?
     Red Army General can just send a message to Blue Army General with a proposed attack time, but the messenger has to pass through the valley,
     so if they are spotted the message can be easily tampered with. So how does Red Army General know that the other General received the message?
-    The messenger might not have made it. And if that happens, Red Army would attack and that is not sufficient to win the war.
-    To circumvent this problem perhaps they have agreed that Blue Army General has to send an acknowledgment back,
+    The messenger might not have made it. And if that happens, Red Army would attack and that is not sufficient to win the war.</p>
+
+<h2 class="section-heading">Acknowledgment cycle</h2>
+<p>To circumvent this problem perhaps they have agreed that Blue Army General has to send an acknowledgment back,
     and Red Army will only attack if that acknowledgment arrives. But again we run into the same problem, how does the Blue Army know that the Red Army has
     received the acknowledgment? If the message doesn't go through, Red Army won't attack, Blue Army will and they'll lose.
-    A possible solution si that the Red Army could send another acknowledgment for the acknowledgment. Again the same problem occurs,
+    A possible solution is that the Red Army could send another acknowledgment for the acknowledgment. Again the same problem occurs,
     there is no way to know that message has gotten through. This problem is unsolvable. There is no theoretical way that the two generals can agree
     that the message has been received and acknowledged.</p>
 
@@ -37,6 +47,8 @@ background: '/img/posts/byzantine.png'
     It managed to do so with an outstanding solution, a proof of work algorithm, allowing the system to reach a coherent global view of the system's state.
     This spurred a whole new field of computer science and game theory research, the consensus mechanisms.</p>
 
+
+<h2 class="section-heading">Carrot and Stick</h2>
 <p>I'll be explaining how proof of work works in my future posts but for now just some food for thought.
     You probably heard about the "carrot and stick" motivational approach that involves offering a "carrot" as a reward for good behavior and a "stick"
     as a consequence of poor behavior. Well, similarly in a cryptocurrency transaction validation there has to be a system in place,
