--- a/_posts/2021-05-12-mining.html
+++ b/_posts/2021-05-12-mining.html
@@ -23,7 +23,7 @@ background: '/img/posts/mining.png'
     always produces the same result. As hashes can be viewed as fingerprints we can picture them as being 100% unique.
     One other neat characteristic of SHA-256 is that the output changes dramatically, completely even if the input changes just by one bit.</p>
 
-<p>Let's try to invent a system in which someone is required to do to find a particular hash value. We'll take any piece of data and put it through SHA-256.
+<p>Let's try to invent a system in which someone is required to find a particular hash value. We'll take any piece of data and put it through SHA-256.
     What are the chances that the first bit is going to be 0? Just a reminder, a bit has two possible values 0 or 1. Ok, so the answer is pretty straightforward, it's 50%.
     So half the hashes that are going to come out of this will have the first bit 0.
     What are the chances that the first two bits are 0? It is 25%, right.
