--- a/about.html
+++ b/about.html
@@ -8,10 +8,7 @@ background: '/img/bg-about.jpg'
 
 <p><strong>Josip Koncurat</strong></p>
 
-<p>Software engineer and Blockchain enthusiast.
-    Currently working at
-    <a href="https://ampnet.io/apx.html" target="_blank" rel="noopener noreferrer">AMPnet</a>,
-    the hottest Croatian blockchain start-up building an investment platform and protocol for tokenization of real-world assets.</p>
+<p>Software engineer and Blockchain enthusiast. Owner at RED FOX ltd. Offering consultancy services within the blockchain industry.</p>
 
 <p class="mb-5">Feel free to contact me at: jkoncura@gmail.com</p>
 
